test/bad/generics/def07.px

func f<V>() V def
    skip

f()
